# parsec-vdd

./: .gitignore  CLI_USAGE.md  CMakeLists.txt  LICENSE  README.md  common.h  demo.cc  parsec-vdd.h  parsec-vdd.sln  setup.iss  vddswitcher.cpp  vddswitcher.h  vddswitcherd.cpp  vddswitcherd.h
.github/workflows/: build.yml  publish.yml  release.yml
app/: App.xaml  App.xaml.cs  CLI.cs  Config.cs  Daemon.cs  Device.cs  Display.cs  Helper.cs  Log.cs  MainWindow.xaml  MainWindow.xaml.cs  MirrorWindow.cs  ParsecDisplay.csproj  ParsecVDD.cs  ParsecVDisplay.csproj  PowerEvents.cs  Program.cs  Shadow.cs  Tray.cs  Updater.cs
app/Components/: Button.xaml  Button.xaml.cs  CloseButton.xaml  CloseButton.xaml.cs  CustomPage.xaml  CustomPage.xaml.cs  DisplayItem.xaml  DisplayItem.xaml.cs
app/Languages/: en.xaml  vi.xaml  zh.xaml
app/Properties/: App.manifest  AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
app/Vdd/: Controller.cs  Core.cs  Errors.cs  Utils.cs
app/setup/: setup.iss
core/: parsec-vdd.h  vdd-demo.cc
docs/: PARSEC_VDD_RE.md  PARSEC_VDD_SPECS.md  VDD_CLI_USAGE.md  VDD_LIBRARY_USAGE.md
include/: parsec-vdd.h
